--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -34,14 +34,14 @@ app.bfm-ssl-enabled         = false
 minipg.username             = bfmuser
 minipg.password             = AAAADIQqT6VLOat1Pp2jikPU+6LCc5ytyPn/iEz3MR3L/GwNz/QX6p4=
 minipg.port                 = 7779
-minipg.use-tls              = true
+minipg.use-tls              = false
 
 bfm.tls-key-alias           = bfm
-bfm.use-tls                 = true
+bfm.use-tls                 = false
 bfm.tls-secret              = AAAADNNpiRFc3ZLZe/rdIyENdFNbUa8QotMFkejq+ThbPBps2Ci2
 bfm.tls-key-store           = /home/serdar/bfm/bfm.p12
 
 bfm.debug-enabled           = true
 
-bfm.user-crypted            = true
+bfm.user-crypted            = false
 
