--- a/app/pom.xml
+++ b/app/pom.xml
@@ -76,6 +76,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+        			<groupId>org.sonarsource.scanner.maven</groupId>
+        			<artifactId>sonar-maven-plugin</artifactId>
+        			<version>3.7.0.1746</version>
+      			</plugin>
 		</plugins>
 	</build>
 
