--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,47 +1,42 @@
-#logging.level.root=warn    }
-
-# logging.level.root=info
-spring.profiles.active      = @spring.profiles.active@
+server.bfmList                  = 127.0.0.1
 
 
-server.bfmList              = 127.0.0.1
+server.pguser                   = bfmuser
+server.pgpassword               = bfmuser
 
-server.pguser               = bfmuser
-server.pgpassword           = AAAADIQqT6VLOat1Pp2jikPU+6LCc5ytyPn/iEz3MR3L/GwNz/QX6p4=
 
-watcher.cluster-port        = 9994
-#watcher.cluster-pair        = 10.116.0.3:9994
+watcher.cluster-port            = 9994
+watcher.cluster-pair            = 147.182.197.63:9994
 
-app.watch_strategy          = availability
-app.timeout-ignorance-count = 2
-app.bfm-vip-enabled         = true
+
+
+
+app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
 
+
 #server.masterip=
-heartbeat.interval          = 10
-heartbeat.query             = select 1
 
 
-server.postgres_bin_path    = /u01/app/pg13
-server.postgres_data_path   = /u02/cdp_data13
-server.postgres_pgpass_path = /home/s_cust13
+server.postgres_bin_path        = /usr/pgsql-15/bin
+server.postgres_data_path   = /pgdata/15/data
+server.postgres_pgpass_path = /var/lib/pgsql
 
-bfm.approval-key            = test
-server.pglist               = 159.89.236.23:5432|0,143.198.162.178:5432,157.230.85.151:5432
-app.bfm-ssl-enabled         = false
 
-minipg.username             = bfmuser
-minipg.password             = AAAADIQqT6VLOat1Pp2jikPU+6LCc5ytyPn/iEz3MR3L/GwNz/QX6p4=
-minipg.port                 = 7779
-minipg.use-tls              = false
+server.pglist=147.182.197.63:5432,146.190.149.185:5432
+app.bfm-ssl-enabled             = false
 
-bfm.tls-key-alias           = bfm
-bfm.use-tls                 = false
-bfm.tls-secret              = AAAADNNpiRFc3ZLZe/rdIyENdFNbUa8QotMFkejq+ThbPBps2Ci2
-bfm.tls-key-store           = /home/serdar/bfm/bfm.p12
 
-bfm.debug-enabled           = true
+bfm.user-crypted          = false
+bfm.use-tls                     = false
 
-bfm.user-crypted            = false
 
+minipg.use-tls                  = false
+
+
+minipg.username                 = bfmuser
+minipg.password                 = bfmuser
+minipg.port                     = 7779
+heartbeat.interval          =10
+heartbeat.query             =select 1
