if rewind fail rejoin with pg_basebackup function added

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -23,7 +23,7 @@ server.postgres_bin_path        = /usr/pgsql-15/bin
 server.postgres_data_path   = /pgdata/15/data
 server.postgres_pgpass_path = /var/lib/pgsql
 
-
+server.basebackup_slave_join = true
 server.pglist=147.182.197.63:5432,146.190.149.185:5432
 app.bfm-ssl-enabled             = false
 
