--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -23,14 +23,13 @@ server.postgres_bin_path        = /usr/pgsql-15/bin
 server.postgres_data_path   = /pgdata/15/data
 server.postgres_pgpass_path = /var/lib/pgsql
 
-server.basebackup_slave_join = true
 server.pglist=147.182.197.63:5432,146.190.149.185:5432
 app.bfm-ssl-enabled             = false
 
 
 bfm.user-crypted          = false
 bfm.use-tls                     = false
-
+bfm.basebackup_slave_join = true
 
 minipg.use-tls                  = false
 
