Email service Added, imports cleaned..

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -39,3 +39,11 @@ minipg.password                 = bfmuser
 minipg.port                     = 7779
 heartbeat.interval          =10
 heartbeat.query             =select 1
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=user.name@gmail.com
+spring.mail.password=password.gmail
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
