email notification enable/disable flag, cluster WARNING state, multi email receiver with comma seperated added

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -40,10 +40,12 @@ minipg.port                     = 7779
 heartbeat.interval          =10
 heartbeat.query             =select 1
 
-
+bfm.mail-notification-enabled   = true
+#multiple receiver must seperate with comma
+bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=user.name@gmail.com
-spring.mail.password=password.gmail
+spring.mail.username=smtp.user.name@gmail.com
+spring.mail.password=smtp.user.password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
