sample app.properties file

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.pgpassword               = bfmuser
 
 
 watcher.cluster-port            = 9994
-watcher.cluster-pair            = 147.182.197.63:9994
+watcher.cluster-pair            = 146.190.149.185:9994
 
 
 
@@ -40,7 +40,10 @@ minipg.port                     = 7779
 heartbeat.interval          =10
 heartbeat.query             =select 1
 
-bfm.mail-notification-enabled   = true
+#etc.. 1G, 24M, 120K
+bfm.data-loss-tolerance         = 120K
+
+bfm.mail-notification-enabled   = false
 #multiple receiver must seperate with comma
 bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
