if bfm_status.json data too old, ignore failover, status-file-expire added to config

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.pgpassword               = bfmuser
 
 
 watcher.cluster-port            = 9994
-watcher.cluster-pair            = 146.190.149.185:9994
+watcher.cluster-pair            = 147.182.197.63:9994
 
 
 
@@ -14,22 +14,22 @@ watcher.cluster-pair            = 146.190.149.185:9994
 app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
-
+bfm.watch-strategy              = manual
 
 #server.masterip=
 
 
 server.postgres_bin_path        = /usr/pgsql-15/bin
-server.postgres_data_path   = /pgdata/15/data
-server.postgres_pgpass_path = /var/lib/pgsql
+server.postgres_data_path       = /pgdata/15/data
+server.postgres_pgpass_path     = /var/lib/pgsql
 
-server.pglist=147.182.197.63:5432,146.190.149.185:5432
+server.pglist                   =147.182.197.63:5432,146.190.149.185:5432
 app.bfm-ssl-enabled             = false
 
 
-bfm.user-crypted          = false
+bfm.user-crypted                = false
 bfm.use-tls                     = false
-bfm.basebackup_slave_join = true
+bfm.basebackup_slave_join       = true
 
 minipg.use-tls                  = false
 
@@ -37,13 +37,15 @@ minipg.use-tls                  = false
 minipg.username                 = bfmuser
 minipg.password                 = bfmuser
 minipg.port                     = 7779
-heartbeat.interval          =10
-heartbeat.query             =select 1
+heartbeat.interval              =10
+heartbeat.query                 =select 1
 
-#etc.. 1G, 24M, 120K
+#1G, 24M, 120K
 bfm.data-loss-tolerance         = 120K
+#3H=3 Hour or 1D=1 Day
+bfm.status-file-expire          = 1H
 
-bfm.mail-notification-enabled   = false
+bfm.mail-notification-enabled   = true
 #multiple receiver must seperate with comma
 bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
