RPM default application.properties file

--- a/rpm/src/main/resources/settings/application.properties
+++ b/rpm/src/main/resources/settings/application.properties
@@ -1,39 +1,61 @@
-spring.profiles.active      =@spring.profiles.active@
-logging.pattern.console     = %d %-22.22logger{0} : %m%n%wEx
-server.bfmList              =127.0.0.1
-
-
-# just give PostgreSQL server ip's that managed by BFM
-server.pglist               =165.227.19.96:5432,138.68.9.190:5432
-server.pguser               =postgres
-server.pgpassword           =080419
+spring.profiles.active          = @spring.profiles.active@
+logging.pattern.console         = %d %-22.22logger{0} : %m%n%wEx
+server.bfmList                  = 127.0.0.1
 
 
 # clustername should be same all of the bfm servers
-app.bfm-hc-clustername      =BFMCluster
+app.bfm-hc-clustername          = BFMCluster
+
+server.pguser                   = bfmuser
+server.pgpassword               = bfmuser
 
 
-# just give bfm server ip's that installed  watcher and bioxy agent
-app.leave_ex-master_closed  = false
+watcher.cluster-port            = 9994
+watcher.cluster-pair            = 147.182.197.63:9994
 
 
-watcher.cluster-port        =9994
-watcher.cluster-pair        =138.68.9.190:9995
+app.timeout-ignorance-count     = 10
 
-
-#app.hc-cluster-ip-list=138.68.9.190,134.209.96.234
-app.hc-cluster-ip-list      =134.209.96.234
-app.watch_strategy          =availability
-
+app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
-
-server.postgres_bin_path    =/usr/pgsql-12/bin/
-server.postgres_data_path   =/var/lib/pgsql/12/data/
-server.postgres_pgpass_path =/var/lib/pgsql/
+bfm.watch-strategy              = availability
 
 #server.masterip=
-heartbeat.interval          =10
-heartbeat.query             =select 1
 
 
+server.postgres_bin_path        = /usr/pgsql-15/bin
+server.postgres_data_path       = /pgdata/15/data
+server.postgres_pgpass_path     = /var/lib/pgsql
+
+server.pglist                   = 147.182.197.63:5432,146.190.149.185:5432
+app.bfm-ssl-enabled             = false
+
+
+bfm.user-crypted                = false
+bfm.use-tls                     = false
+bfm.basebackup_slave_join       = true
+
+minipg.use-tls                  = false
+
+
+minipg.username                 = bfmuser
+minipg.password                 = bfmuser
+minipg.port                     = 7779
+heartbeat.interval              = 10
+heartbeat.query                 = select 1
+
+#1G, 24M, 120K
+bfm.data-loss-tolerance         = 120K
+#3H=3 Hour or 1D=1 Day
+bfm.status-file-expire          = 1H
+
+bfm.mail-notification-enabled   = true
+#multiple receiver must seperate with comma
+bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=smtp.user.name@gmail.com
+spring.mail.password=smtp.user.password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
