ex master rejoin to cluster as slave or leave it stopped

--- a/rpm/src/main/resources/settings/application.properties
+++ b/rpm/src/main/resources/settings/application.properties
@@ -49,6 +49,8 @@ heartbeat.query                 = select 1
 bfm.data-loss-tolerance         = 120K
 #3H=3 Hour or 1D=1 Day
 bfm.status-file-expire          = 1H
+#rejoin or stop
+bfm.ex-master-behavior          = rejoin
 
 bfm.mail-notification-enabled   = true
 #multiple receiver must seperate with comma
