--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+spring.profiles.active          = @spring.profiles.active@
+logging.pattern.console         = %d %-22.22logger{0} : %m%n%wEx
 server.bfmList                  = 127.0.0.1
 
+
+# clustername should be same all of the bfm servers
+app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
 server.pgpassword               = bfmuser
@@ -9,12 +14,12 @@ watcher.cluster-port            = 9994
 watcher.cluster-pair            = 147.182.197.63:9994
 
 
-
+app.timeout-ignorance-count     = 10
 
 app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
-bfm.watch-strategy              = manual
+bfm.watch-strategy              = availability
 
 #server.masterip=
 
@@ -23,7 +28,7 @@ server.postgres_bin_path        = /usr/pgsql-15/bin
 server.postgres_data_path       = /pgdata/15/data
 server.postgres_pgpass_path     = /var/lib/pgsql
 
-server.pglist                   =147.182.197.63:5432,146.190.149.185:5432
+server.pglist                   = 147.182.197.63:5432,146.190.149.185:5432
 app.bfm-ssl-enabled             = false
 
 
@@ -37,20 +42,25 @@ minipg.use-tls                  = false
 minipg.username                 = bfmuser
 minipg.password                 = bfmuser
 minipg.port                     = 7779
-heartbeat.interval              =10
-heartbeat.query                 =select 1
+heartbeat.interval              = 10
+heartbeat.query                 = select 1
 
 #1G, 24M, 120K
 bfm.data-loss-tolerance         = 120K
 #3H=3 Hour or 1D=1 Day
 bfm.status-file-expire          = 1H
+#rejoin or stop
+bfm.ex-master-behavior          = rejoin
 
 bfm.mail-notification-enabled   = true
 #multiple receiver must seperate with comma
-bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
+bfm.notification-mail-receivers = sedat.basmaci@bisoft.com.tr
+# bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=smtp.user.name@gmail.com
-spring.mail.password=smtp.user.password
+spring.mail.username=redmine@bisoft.com.tr
+spring.mail.password=bisoft123!
+# spring.mail.username=smtp.user.name@gmail.com
+# spring.mail.password=smtp.user.password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
