def Params pretty

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.bfmList                  = 127.0.0.1
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = b1s0ft14
+server.pgpassword               = bfmPassword
 
 
 watcher.cluster-port            = 9994
@@ -47,7 +47,7 @@ minipg.use-tls                  = false
 
 
 minipg.username                 = bfmuser
-minipg.password                 = b1s0ft14
+minipg.password                 = bfmPassword
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
@@ -61,13 +61,10 @@ bfm.ex-master-behavior          = rejoin
 
 bfm.mail-notification-enabled   = false
 #multiple receiver must seperate with comma
-bfm.notification-mail-receivers = sedat.basmaci@bisoft.com.tr
 # bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=redmine@bisoft.com.tr
-spring.mail.password=bisoft123!
-# spring.mail.username=smtp.user.name@gmail.com
-# spring.mail.password=smtp.user.password
+spring.mail.username=smtp.user.name@gmail.com
+spring.mail.password=smtp.user.password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
