remove offline sync slave from master , back to online slave set async to sync

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -12,12 +12,10 @@ server.bfmList                  = 127.0.0.1
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = bfmPassword
-
+server.pgpassword               = B1S0ft25
 
 watcher.cluster-port            = 9994
 watcher.cluster-pair            = 157.230.108.70:9994
-
 
 app.timeout-ignorance-count     = 5
 
@@ -26,28 +24,22 @@ app.bfm-vip-enabled             = true
 # or it will run in availability mode!
 bfm.watch-strategy              = availability
 
-#server.masterip=
-
 
 server.postgres_bin_path        = /usr/pgsql-16/bin
 server.postgres_data_path       = /pgdata/16/data
 server.postgres_pgpass_path     = /var/lib/pgsql
 
-server.pglist                   = 167.172.99.9:5432,157.230.108.70:5432
+server.pglist                   = 46.101.246.180:5432,46.101.130.251:5432
 app.bfm-ssl-enabled             = false
 
-
 bfm.user-crypted                = false
-bfm.use-tls                     = false
-bfm.tls-key-store               = certificate/bfm.p12
+bfm.use-tls                     = true
+minipg.use-tls                  = true
+bfm.tls-secret                  = changeit
+bfm.tls-key-store               = bfm.p12
 
-bfm.basebackup-slave-join       = false
-
-minipg.use-tls                  = false
-
-
-minipg.username                 = bfmuser
-minipg.password                 = bfmPassword
+minipg.username                 = m1n1pg
+minipg.password                 = m1n1Pg25
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
@@ -58,7 +50,7 @@ bfm.data-loss-tolerance         = 120K
 bfm.status-file-expire          = 1H
 #rejoin or stop
 bfm.ex-master-behavior          = rejoin
-
+bfm.basebackup-slave-join       = true
 bfm.mail-notification-enabled   = false
 #multiple receiver must seperate with comma
 # bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
