--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 	<groupId>com.bisoft</groupId>
 	<artifactId>bfm</artifactId>
-	<version>3.0.0</version>
+	<version>3.1.0</version>
 	<packaging>pom</packaging>
 	
 	<name>bfm</name>
@@ -27,7 +27,7 @@
 
 	<modules>
 		<module>app</module>
-		<module>rpm</module>
+		<!-- <module>rpm</module> -->
 		<!-- <module>deb</module> -->
 	</modules>
 
