replica app_name fix for ubuntu, deb package pom fix

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -12,10 +12,10 @@ server.bfmList                  = 127.0.0.1
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = B1S0ft25
+server.pgpassword               = b1s0ft06
 
 watcher.cluster-port            = 9994
-watcher.cluster-pair            = 157.230.108.70:9994
+watcher.cluster-pair            = 192.168.1.18:9994
 
 app.timeout-ignorance-count     = 5
 
@@ -29,7 +29,7 @@ server.postgres_bin_path        = /usr/pgsql-16/bin
 server.postgres_data_path       = /pgdata/16/data
 server.postgres_pgpass_path     = /var/lib/pgsql
 
-server.pglist                   = 46.101.246.180:5432,46.101.130.251:5432
+server.pglist                   = 192.168.1.17:5432,192.168.1.18:5432
 app.bfm-ssl-enabled             = false
 
 bfm.user-crypted                = false
