--- a/deb/src/main/resources/settings/application.properties
+++ b/deb/src/main/resources/settings/application.properties
@@ -1,5 +1,10 @@
 spring.profiles.active          = @spring.profiles.active@
 logging.pattern.console         = %d %-22.22logger{0} : %m%n%wEx
+logging.file.name               = log/app.log
+logging.pattern.file            = %d : %m%n%wEx
+logging.file.max-size           = 10MB
+logging.file.max-history        = 5
+logging.file.total-size-cap     = 5GB
 server.bfmList                  = 127.0.0.1
 
 
@@ -7,40 +12,34 @@ server.bfmList                  = 127.0.0.1
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = bfmuser
-
+server.pgpassword               = b1s0ft06
 
 watcher.cluster-port            = 9994
-watcher.cluster-pair            = 147.182.197.63:9994
+watcher.cluster-pair            = 192.168.1.18:9994
 
-
-app.timeout-ignorance-count     = 10
+app.timeout-ignorance-count     = 5
 
 app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
 bfm.watch-strategy              = availability
 
-#server.masterip=
 
-
-server.postgres_bin_path        = /usr/pgsql-15/bin
-server.postgres_data_path       = /pgdata/15/data
+server.postgres_bin_path        = /usr/pgsql-16/bin
+server.postgres_data_path       = /pgdata/16/data
 server.postgres_pgpass_path     = /var/lib/pgsql
 
-server.pglist                   = 147.182.197.63:5432,146.190.149.185:5432
+server.pglist                   = 192.168.1.17:5432,192.168.1.18:5432
 app.bfm-ssl-enabled             = false
 
-
 bfm.user-crypted                = false
-bfm.use-tls                     = false
-bfm.basebackup_slave_join       = true
+bfm.use-tls                     = true
+minipg.use-tls                  = true
+bfm.tls-secret                  = changeit
+bfm.tls-key-store               = bfm.p12
 
-minipg.use-tls                  = false
-
-
-minipg.username                 = bfmuser
-minipg.password                 = bfmuser
+minipg.username                 = m1n1pg
+minipg.password                 = m1n1Pg25
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
@@ -51,10 +50,10 @@ bfm.data-loss-tolerance         = 120K
 bfm.status-file-expire          = 1H
 #rejoin or stop
 bfm.ex-master-behavior          = rejoin
-
-bfm.mail-notification-enabled   = true
+bfm.basebackup-slave-join       = true
+bfm.mail-notification-enabled   = false
 #multiple receiver must seperate with comma
-bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
+# bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=smtp.user.name@gmail.com
