--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 
 	<modules>
 		<module>app</module>
-		<!-- <module>rpm</module> -->
-		<module>deb</module>
+		<module>rpm</module>
+		<!-- <module>deb</module> -->
 	</modules>
 
 </project>
