sample application.properties fixed, web-ui password encrypter added

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,45 +1,28 @@
-spring.profiles.active          = @spring.profiles.active@
-logging.pattern.console         = %d %-22.22logger{0} : %m%n%wEx
-logging.file.name               = log/app.log
-logging.pattern.file            = %d : %m%n%wEx
-logging.file.max-size           = 10MB
-logging.file.max-history        = 5
-logging.file.total-size-cap     = 5GB
-server.bfmList                  = 127.0.0.1
-
-
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = b1s0ft06
+server.pgpassword               = AAAADO7uVP5j1kPzAw5iTY/x643RcHqSJHM3c23GeaqUYIOZzu4tqw==
 
 watcher.cluster-port            = 9994
-watcher.cluster-pair            = 192.168.1.18:9994
+watcher.cluster-pair            = 46.101.130.251:9994
 
 app.timeout-ignorance-count     = 5
 
-app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
 bfm.watch-strategy              = availability
 
+server.pglist                   = 46.101.246.180:5432,46.101.130.251:5432
 
-server.postgres_bin_path        = /usr/pgsql-16/bin
-server.postgres_data_path       = /pgdata/16/data
-server.postgres_pgpass_path     = /var/lib/pgsql
-
-server.pglist                   = 192.168.1.17:5432,192.168.1.18:5432
-app.bfm-ssl-enabled             = false
-
-bfm.user-crypted                = false
+bfm.user-crypted                = true
 bfm.use-tls                     = true
 minipg.use-tls                  = true
-bfm.tls-secret                  = changeit
+bfm.tls-secret                  = AAAADEv1hU1Mm1TgOyiiOLS8R/lXL3zQ9S71a4OkKQZUAx9JxTO/Bg==
 bfm.tls-key-store               = bfm.p12
 
 minipg.username                 = m1n1pg
-minipg.password                 = m1n1Pg25
+minipg.password                 = AAAADLq0XPdDDaOErfdxroYg/T8nTfiZDsbgAp67knz2ScMVOJNKxg==
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
