--- a/rpm/src/main/resources/settings/application.properties
+++ b/rpm/src/main/resources/settings/application.properties
@@ -1,46 +1,28 @@
-spring.profiles.active          = @spring.profiles.active@
-logging.pattern.console         = %d %-22.22logger{0} : %m%n%wEx
-server.bfmList                  = 127.0.0.1
-
-
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = bfmuser
-
+server.pgpassword               = AAAADO7uVP5j1kPzAw5iTY/x643RcHqSJHM3c23GeaqUYIOZzu4tqw==
 
 watcher.cluster-port            = 9994
-watcher.cluster-pair            = 147.182.197.63:9994
+watcher.cluster-pair            = 46.101.130.251:9994
 
+app.timeout-ignorance-count     = 5
 
-app.timeout-ignorance-count     = 10
-
-app.bfm-vip-enabled             = true
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
 bfm.watch-strategy              = availability
 
-#server.masterip=
+server.pglist                   = 46.101.246.180:5432,46.101.130.251:5432
 
+bfm.user-crypted                = true
+bfm.use-tls                     = true
+minipg.use-tls                  = true
+bfm.tls-secret                  = AAAADEv1hU1Mm1TgOyiiOLS8R/lXL3zQ9S71a4OkKQZUAx9JxTO/Bg==
+bfm.tls-key-store               = bfm.p12
 
-server.postgres_bin_path        = /usr/pgsql-15/bin
-server.postgres_data_path       = /pgdata/15/data
-server.postgres_pgpass_path     = /var/lib/pgsql
-
-server.pglist                   = 147.182.197.63:5432,146.190.149.185:5432
-app.bfm-ssl-enabled             = false
-
-
-bfm.user-crypted                = false
-bfm.use-tls                     = false
-bfm.basebackup_slave_join       = true
-
-minipg.use-tls                  = false
-
-
-minipg.username                 = bfmuser
-minipg.password                 = bfmuser
+minipg.username                 = m1n1pg
+minipg.password                 = AAAADLq0XPdDDaOErfdxroYg/T8nTfiZDsbgAp67knz2ScMVOJNKxg==
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
@@ -51,10 +33,10 @@ bfm.data-loss-tolerance         = 120K
 bfm.status-file-expire          = 1H
 #rejoin or stop
 bfm.ex-master-behavior          = rejoin
-
-bfm.mail-notification-enabled   = true
+bfm.basebackup-slave-join       = true
+bfm.mail-notification-enabled   = false
 #multiple receiver must seperate with comma
-bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
+# bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=smtp.user.name@gmail.com
