--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<modules>
 		<module>app</module>
 		<module>rpm</module>
-		<!-- <module>deb</module> -->
+		<module>deb</module>
 	</modules>
 
 </project>
