--- a/app/pom.xml
+++ b/app/pom.xml
@@ -92,7 +92,17 @@
         			<groupId>org.sonarsource.scanner.maven</groupId>
         			<artifactId>sonar-maven-plugin</artifactId>
         			<version>3.7.0.1746</version>
-      			</plugin>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<release>${java.version}</release>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
