--- a/rpm/src/main/resources/settings/application.properties
+++ b/rpm/src/main/resources/settings/application.properties
@@ -1,5 +1,6 @@
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
+app.custom-logo-path            =
 
 server.pguser                   = bfmuser
 server.pgpassword               = AAAADO7uVP5j1kPzAw5iTY/x643RcHqSJHM3c23GeaqUYIOZzu4tqw==
