--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
-app.custom-logo-path            = /etc/bfm/bfmwatcher/Boubyan_Bank_Updated_Logo_2024.jpg
+app.custom-logo-path            =
 server.pguser                   = bfmuser
 server.pgpassword               = AAAADL0PFFV2uecSvhFxDnUPFbWCpWdxs04Bt3ksPFkw1wdbsynCYA==
 
