--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,27 +2,27 @@
 app.bfm-hc-clustername          = BFMCluster
 
 server.pguser                   = bfmuser
-server.pgpassword               = AAAADO7uVP5j1kPzAw5iTY/x643RcHqSJHM3c23GeaqUYIOZzu4tqw==
+server.pgpassword               = b1s0ft14
 
 watcher.cluster-port            = 9994
 watcher.cluster-pair            = 46.101.130.251:9994
 
-app.timeout-ignorance-count     = 2
+app.timeout-ignorance-count     = 3
 
 # use only one of {availability,manual,performance,protection}
 # or it will run in availability mode!
 bfm.watch-strategy              = availability
 
-server.pglist                   = 46.101.246.180:5439,46.101.130.251:5439
+server.pglist                   = 46.101.246.180:5439,46.101.130.251:5439,64.226.101.90:5439
 
-bfm.user-crypted                = true
-bfm.use-tls                     = true
-minipg.use-tls                  = true
-bfm.tls-secret                  = AAAADEv1hU1Mm1TgOyiiOLS8R/lXL3zQ9S71a4OkKQZUAx9JxTO/Bg==
+bfm.user-crypted                = false
+bfm.use-tls                     = false
+minipg.use-tls                  = false
+bfm.tls-secret                  = changeit
 bfm.tls-key-store               = bfm.p12
 
-minipg.username                 = m1n1pg
-minipg.password                 = AAAADLq0XPdDDaOErfdxroYg/T8nTfiZDsbgAp67knz2ScMVOJNKxg==
+minipg.username                 = minipg
+minipg.password                 = m1n1pg
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
