password encryption erro bug fix and custom-logo feature add

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
-
+app.custom-logo                 =
 server.pguser                   = bfmuser
 server.pgpassword               = b1s0ft14
 
