custom-logp-path variable def fixed

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
-app.custom-logo                 =
+app.custom-logo-path            = /etc/bfm/bfmwatcher/turk.jpg
 server.pguser                   = bfmuser
-server.pgpassword               = b1s0ft14
+server.pgpassword               = AAAADL0PFFV2uecSvhFxDnUPFbWCpWdxs04Bt3ksPFkw1wdbsynCYA==
 
 watcher.cluster-port            = 9994
 watcher.cluster-pair            = 46.101.130.251:9994
@@ -15,14 +15,14 @@ bfm.watch-strategy              = availability
 
 server.pglist                   = 46.101.246.180:5439,46.101.130.251:5439,64.226.101.90:5439
 
-bfm.user-crypted                = false
+bfm.user-crypted                = true
 bfm.use-tls                     = false
 minipg.use-tls                  = false
 bfm.tls-secret                  = changeit
 bfm.tls-key-store               = bfm.p12
 
 minipg.username                 = minipg
-minipg.password                 = m1n1pg
+minipg.password                 = AAAADJ2OUh79xMF9LioWLnIQQohIxUfcx4QR0o49FK14xx/I2D8=
 minipg.port                     = 7779
 heartbeat.interval              = 10
 heartbeat.query                 = select 1
