sample app.props fixed

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # clustername should be same all of the bfm servers
 app.bfm-hc-clustername          = BFMCluster
-app.custom-logo-path            = /etc/bfm/bfmwatcher/turk.jpg
+app.custom-logo-path            = 
 server.pguser                   = bfmuser
 server.pgpassword               = AAAADL0PFFV2uecSvhFxDnUPFbWCpWdxs04Bt3ksPFkw1wdbsynCYA==
 
@@ -18,7 +18,7 @@ server.pglist                   = 46.101.246.180:5439,46.101.130.251:5439,64.226
 bfm.user-crypted                = true
 bfm.use-tls                     = false
 minipg.use-tls                  = false
-bfm.tls-secret                  = changeit
+bfm.tls-secret                  = AAAADEv1hU1Mm1TgOyiiOLS8R/lXL3zQ9S71a4OkKQZUAx9JxTO/Bg==
 bfm.tls-key-store               = bfm.p12
 
 minipg.username                 = minipg
