--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -40,12 +40,14 @@ bfm.status-file-expire          = 1H
 #rejoin or stop
 bfm.ex-master-behavior          = rejoin
 bfm.basebackup-slave-join       = true
-bfm.mail-notification-enabled   = false
+bfm.mail-notification-enabled   = true
 #multiple receiver must seperate with comma
-# bfm.notification-mail-receivers = user1.email@gmail.com,user2.email@gmail.com
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=smtp.user.name@gmail.com
-spring.mail.password=smtp.user.password
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+bfm.notification-mail-receivers = sedat.basmaci@bisoft.com.tr,furkan.ar@bisoft.com.tr
+bfm.use-mailx=true
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=smtp.user.name@gmail.com
+#spring.mail.password=smtp.user.password
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
