bfmctl app name and sync state added, mailx support added

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # clustername should be same all of the bfm servers
-app.bfm-hc-clustername          = BFMCluster
+app.bfm-hc-clustername          = Bank Boubyan PCI Cluster
 
 app.custom-logo-path            = 
 server.pguser                   = bfmuser
